adjust the database engine and also add another model
