# api/v1/static/swagger.json
@@ -5,45 +5,72 @@
     "version": "1.0"
   },
   "basePath": "/api/v1",
-  "tags": [
-    {
-      "name": "Job Seeker",
-      "description": "Operations related to job seekers"
-    },
-    {
-      "name": "Recruiter",
-      "description": "Operations related to recruiters"
-    },
-    {
-      "name": "Certification",
-      "description": "Operations related to certifications"
-    },
-    {
-      "name": "Portfolio",
-      "description": "Operations related to portfolios"
-    },
-    {
-      "name": "Experience",
-      "description": "Operations related to experiences"
-    },
-    {
-      "name": "Education",
-      "description": "Operations related to educations"
-    },
-    {
-      "name": "Job Seeker Info",
-      "description": "Operations related to job seeker info"
-    },
-    {
-      "name": "Review",
-      "description": "Operations related to reviews"
-    },
-    {
-      "name": "View",
-      "description": "Operations related to views"
-    }
-  ],
   "paths": {
+    "/stats": {
+      "get": {
+        "tags": ["Stats"],
+        "summary": "Retrieve counts of all models",
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "recruiters": {
+                  "type": "integer"
+                },
+                "job_seekers": {
+                  "type": "integer"
+                },
+                "educations": {
+                  "type": "integer"
+                },
+                "views": {
+                  "type": "integer"
+                },
+                "certifications": {
+                  "type": "integer"
+                },
+                "experiences": {
+                  "type": "integer"
+                },
+                "job_seeker_infos": {
+                  "type": "integer"
+                },
+                "portfolios": {
+                  "type": "integer"
+                },
+                "reviews": {
+                  "type": "integer"
+                },
+                "payments": {
+                  "type": "integer"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/status": {
+      "get": {
+        "tags": ["Status"],
+        "summary": "Retrieve API status",
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/register/job_seeker": {
       "$ref": "./job_seeker.json#/paths/~1register~1job_seeker"
     },
@@ -86,12 +113,37 @@
     "/reset_password": {
       "$ref": "./reset_password.json#/paths/~1reset_password"
     },
-    "/stats": {
-      "$ref": "./stats.json#/paths/~1stats"
+    "/certifications": {
+      "$ref": "./all_models.json#/paths/~1certifications"
     },
-    "/status": {
-      "$ref": "./status.json#/paths/~1status"
+    "/educations": {
+      "$ref": "./all_models.json#/paths/~1educations"
+    },
+    "/experiences": {
+      "$ref": "./all_models.json#/paths/~1experiences"
+    },
+    "/job_seeker_infos": {
+      "$ref": "./all_models.json#/paths/~1job_seeker_infos"
+    },
+    "/portfolios": {
+      "$ref": "./all_models.json#/paths/~1portfolios"
+    },
+    "/recruiter_reviews": {
+      "$ref": "./all_models.json#/paths/~1recruiter_reviews"
+    },
+    "/recruiters": {
+      "$ref": "./all_models.json#/paths/~1recruiters"
+    },
+    "/reviews": {
+      "$ref": "./all_models.json#/paths/~1reviews"
+    },
+    "/views": {
+      "$ref": "./all_models.json#/paths/~1views"
+    },
+    "/job_seekers": {
+      "$ref": "./all_models.json#/paths/~1job_seekers"
     }
+
   },
   "definitions": {
     "JobSeeker": {
@@ -110,13 +162,13 @@
       "$ref": "./certification.json#/definitions/Certification"
     },
     "JobSeekerInfo": {
-      "$ref": "./jobSeekerInfo.json#/definitions/JobSeekerInfo"
+      "$ref": "./job_seeker_info.json#/definitions/JobSeekerInfo"
     },
     "Review": {
       "$ref": "./review.json#/definitions/Review"
     },
     "View": {
-      "$ref": "./review.json#/definitions/View"
+      "$ref": "./view.json#/definitions/View"
     },
     "Experience": {
       "$ref": "./experience.json#/definitions/Experience"
