# models/engine/db.py
@@ -17,6 +17,7 @@ from models.review import Review
 from models.job_seeker_info import JobSeekerInfo
 from models.job_seeker_session import JobSeekerSession
 from models.recruiter_session import RecruiterSession
+from models.recruiter_review import RecruiterReview
 from models.view import View
 from sqlalchemy.exc import InvalidRequestError
 from sqlalchemy.orm.exc import NoResultFound
@@ -24,7 +25,8 @@ from sqlalchemy.orm.exc import NoResultFound
 
 ValidClasses = [Recruiter, JobSeeker, Experience,
                 Education, Payment, Portfolio,
-                Certification, Review, JobSeekerInfo, View
+                Certification, Review, JobSeekerInfo, View,
+                JobSeekerSession, RecruiterSession
             ]
 
 classes = {
@@ -39,7 +41,8 @@ classes = {
     "JobSeekerInfo": JobSeekerInfo,
     "View": View,
     "JobSeekerSession": JobSeekerSession,
-    "RecruiterSession": RecruiterSession
+    "RecruiterSession": RecruiterSession,
+    "RecruiterReview": RecruiterReview
 }
 
 
