# models/recruiter.py
@@ -13,4 +13,4 @@ class Recruiter(User, Base):
     companyDesc = Column(String(1024), nullable=False)
     websiteUrl = Column(String(104), nullable=True)
     sessions = relationship("RecruiterSession", backref="recruiter", cascade="all, delete")
-    # reviews = relationship("Review", backref="recruiter", cascade="all, delete")
+    reviews = relationship("RecruiterReview", backref="recruiter", cascade="all, delete")
